Remove more Javolution
- Move WalkerRoutes from CSV to XML.